--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,37 @@
 <html>
   <head>
     <base href="/">
-    <title>Angular 2 QuickStart</title>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css"/>
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Angular 2</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://blackrockdigital.github.io/startbootstrap-sb-admin/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://blackrockdigital.github.io/startbootstrap-sb-admin/css/sb-admin.css">
+    <link rel="stylesheet" href="https://blackrockdigital.github.io/startbootstrap-sb-admin/css/sb-admin.css">
+
+    <link rel="stylesheet" href="https://blackrockdigital.github.io/startbootstrap-sb-admin/css/plugins/morris.css">
+    <link rel="stylesheet" href="https://blackrockdigital.github.io/startbootstrap-sb-admin/font-awesome/css/font-awesome.min.css">
+  
   </head>
 
   <body>
-    <my-app>Loading...</my-app>
+    <my-app>
+      <div class="container">
+        <div class="">
+            <div class="progress">
+              <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar"
+              aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+                Please wait...
+              </div>
+            </div>
+        </div>
+      </div>      
+    </my-app>
     <script src="app.min.js"></script>
   </body>
 </html>
